Perbaikan header login.php, perubahan semua fungsi load daftar aduan, implementasi fungsi di user.php tapi msh bug

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -12,7 +12,7 @@ body {
 }
 
 .mainLayer {
-	margin-top:5%;
+	margin-top:7%;
 	margin-left:2%;
 	margin-right:2%;
 	background-color:rgba(102,102,0,0.75);
@@ -66,7 +66,7 @@ body p {
 	padding-left:8%;
 	padding-bottom:1%;
 	opacity:0.85;
-	width:102%;
+	width:100wh;
 }
 
 .header img {
@@ -84,3 +84,22 @@ body p {
 .loginBox h1 {
 	font-size:30px;
 }
+
+.form-control {
+  display: block;
+  width: 80%;
+  height: 25px;
+  padding: 6px 12px;
+  font-size: 14px;
+  line-height: 1.42857143;
+  color: #555;
+  background-color: #fff;
+  background-image: none;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+          box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+  -webkit-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+          transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+}
+
