--- a/menu.css
+++ b/menu.css
@@ -15,7 +15,7 @@ body {
 }
 
 body a {
-	text-decoration: none;
+	text-decoration:none;
 }
 
 .header {
@@ -66,9 +66,9 @@ body a {
   display:inline-block;
   vertical-align:middle;
   line-height:50%;
-  font-size:14px;
+  font-size:16px;
   min-height:50px;
-  margin-bottom:-5%;
+  margin-bottom:-5%%;
 }
 #cssmenu ul {
   position: relative;
@@ -254,13 +254,13 @@ body a {
 
 .contentBox {
 	float:right;
-	margin-left:15%;
+	margin-left: 0.57%;
 	margin-right:0.5%;
 	margin-top:0.4%;
 	padding-right:1%;
 	padding-left:1%;
 	width: 78%;
-	color:rgba(255,255,255,1);
+	color:white;
 	font-family:'GeosansLight';
 }
 
@@ -290,26 +290,8 @@ body a {
 
 .form-control {
   display: block;
-  width: 80%;
+  width: 100%;
   height: 25px;
-  padding: 6px 12px;
-  font-size: 14px;
-  line-height: 1.42857143;
-  color: #555;
-  background-color: #fff;
-  background-image: none;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
-          box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
-  -webkit-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
-          transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
-}
-
-.form-controlTextArea {
-  display: block;
-  width: 80%;
-  height: 159px;
   padding: 6px 12px;
   font-size: 14px;
   line-height: 1.42857143;
@@ -339,44 +321,25 @@ body a {
 }
 
 .mainLayer h2 {
-	font-size:22px;
+	font-size:24px;
 }
 
 .mainLayer p {
-	font-size:20px;
-}
-
-.table {
-  border-spacing: 0;
-  border-collapse: collapse;
-  min-width: 100%;
-  background-color: transparent;
-}
-
-.table td th {
-	min-width: 100%
-	min-height: 5px;
-	margin-bottom:5%;
-}
-
-.table th {
-	border-bottom-color:rgba(255,255,255,1);
-	border-bottom:double;
+	font-size:18px;
 }
 
 .formAduan {
-	margin-top:1%;
-	margin-left:30%;
+	float:right;
+	margin-top:7%;
+	left:30%;
+	margin-left:9%;
 	margin-right:1%;
 	background-color:rgba(153,204,0,0.9);
-	padding-top:2%;
-	padding-right:2%;
-	padding-bottom:3%;
-	padding-left:8%;
+	padding:2%;
 	font-family:"GeosansLight";
 	color:white;
-	font-size:20px;
-	width:42%;
+	font-size:16px;
+	width:78%;
 }
 
 .button {
@@ -385,7 +348,7 @@ body a {
 	color:white;
 	padding:10px;
 	background-color:rgba(0,51,0,0.8);
-	width:20%;
+	width:15%;
 	border:3px;
 	border-color:white;
 	border:medium;
