--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -284,7 +284,7 @@ button,
 select,
 textarea {
   font-family: inherit;
-  font-size: inherit;
+  font-size: 20px;
   line-height: inherit;
 }
 a {
