--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -259,7 +259,6 @@ body a{
 	margin-left:15%;
 	margin-right:0.5%;
 	margin-top:3%;
-	/* margin-top:0.4%; */
 	padding-right:1%;
 	padding-left:1%;
 	width: 78%;
@@ -270,9 +269,8 @@ body a{
 .contentBoxTable {
 	float:right;
 	margin-left:15%;
-	margin-right:0.5%;
-	margin-top:0.4%;
-	padding-top:2%;
+	margin-right:2%;
+	margin-top:3.5%;;
 	padding-right:2%;
 	padding-left:2%;
 	padding-bottom:3%;
@@ -382,8 +380,8 @@ body a{
 }
 
 .formAduan {
-	margin-top:3%;
-	margin-left:30%;
+	margin-top:3.5%;
+	margin-left:35%;
 	margin-right:1%;
 	background-color:rgba(153,204,0,0.9);
 	padding-top:2%;
@@ -397,14 +395,14 @@ body a{
 }
 
 .formTaman {
-	margin-top:10%;
-	margin-left:27%;
-	margin-right:25%;
+	margin-top:3.5%;
+	margin-left:35%;
+	margin-right:1%;
 	background-color:rgba(153,204,0,0.9);
 	padding-top:2%;
 	padding-right:2%;
 	padding-bottom:3%;
-	padding-left:2%;
+	padding-left:8%;
 	font-family:"GeosansLight";
 	color:white;
 	font-size:20px;
