--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -37,7 +37,7 @@ body a:hover{
 	padding-top:1%;
 	padding-left:8%;
 	padding-bottom:1%;
-	width:100%;
+	width:105%;
 	position:fixed;
 }
 
@@ -261,14 +261,14 @@ body a:hover{
 
 .contentBox {
 	float:right;
-	margin-left:15%;
+	margin-left:13%;
 	margin-right:0.5%;
 	margin-top:3%;
 	margin-bottom:-2%;
 	/* margin-top:0.4%; */
 	padding-right:1%;
 	padding-left:1%;
-	width: 78%;
+	width: 80%;
 	color:rgba(255,255,255,1);
 	font-family:'GeosansLight';
 }
@@ -331,7 +331,7 @@ body a:hover{
 
 .form-controlTextArea {
   display: block;
-  width: 80%;
+  width: 490px;
   height: 159px;
   padding: 6px 12px;
   font-size: 14px;
